--- a/index.html
+++ b/index.html
@@ -48,187 +48,29 @@
 <body>
   <div class="container">
     <div class="profile">
-      <img src="./images/avt.png" alt="Profile Picture" class="profile-pic" />
-      <h1 class="name">Davis Tran</h1>
+      <img id="avatar" src="./images/avt.png" alt="Profile Picture" class="profile-pic" />
+      <h1 class="name" id="fullname">Davis Tran</h1>
 
 
-      <div class="button-container">
-        <div class="button-group">
-
-
-          <a href="#" title="ZhgChgLi's Medium" target="_blank" class="icon-button" alt="ZhgChgLi's Medium">
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="25px" height="25px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M3 1H1V3H3C8.52285 3 13 7.47715 13 13V15H15V13C15 6.37258 9.62742 1 3 1Z" fill="#FFFFFF" />
-              <path d="M3 6H1V8H3C5.76142 8 8 10.2386 8 13V15H10V13C10 9.13401 6.86599 6 3 6Z" fill="#FFFFFF" />
-              <path
-                d="M3 15C4.10457 15 5 14.1046 5 13C5 11.8954 4.10457 11 3 11C1.89543 11 1 11.8954 1 13C1 14.1046 1.89543 15 3 15Z"
-                fill="#FFFFFF" />
-            </svg>
-            <!-- <i class="fa-brands fa-medium"></i> -->
-          </a>
-
-
-          <a href="https://instagram.com/theanishtar" title="" target="_blank" class="icon-button" alt="">
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
-                fill="#FFFFFF" />
-              <path
-                d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z"
-                fill="#FFFFFF" />
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z"
-                fill="#FFFFFF" />
-            </svg>
-            <!-- <i class="fa-brands fa-github"></i> -->
-          </a>
-
-
-          <a href="https://github.com/theanishtar" title="ZhgChgLi's Twitter" target="_blank" class="icon-button"
-            alt="ZhgChgLi's Twitter">
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M4.0744 2.9938C4.13263 1.96371 4.37869 1.51577 5.08432 1.15606C5.84357 0.768899 7.04106 0.949072 8.45014 1.66261C9.05706 1.97009 9.11886 1.97635 10.1825 1.83998C11.5963 1.65865 13.4164 1.65929 14.7213 1.84164C15.7081 1.97954 15.7729 1.97265 16.3813 1.66453C18.3814 0.651679 19.9605 0.71795 20.5323 1.8387C20.8177 2.39812 20.8707 3.84971 20.6494 5.04695C20.5267 5.71069 20.5397 5.79356 20.8353 6.22912C22.915 9.29385 21.4165 14.2616 17.8528 16.1155C17.5801 16.2574 17.3503 16.3452 17.163 16.4167C16.5879 16.6363 16.4133 16.703 16.6247 17.7138C16.7265 18.2 16.8491 19.4088 16.8973 20.4002C16.9844 22.1922 16.9831 22.2047 16.6688 22.5703C16.241 23.0676 15.6244 23.076 15.2066 22.5902C14.9341 22.2734 14.9075 22.1238 14.9075 20.9015C14.9075 19.0952 14.7095 17.8946 14.2417 16.8658C13.6854 15.6415 14.0978 15.185 15.37 14.9114C17.1383 14.531 18.5194 13.4397 19.2892 11.8146C20.0211 10.2698 20.1314 8.13501 18.8082 6.83668C18.4319 6.3895 18.4057 5.98446 18.6744 4.76309C18.7748 4.3066 18.859 3.71768 18.8615 3.45425C18.8653 3.03823 18.8274 2.97541 18.5719 2.97541C18.4102 2.97541 17.7924 3.21062 17.1992 3.49805L16.2524 3.95695C16.1663 3.99866 16.07 4.0147 15.975 4.0038C13.5675 3.72746 11.2799 3.72319 8.86062 4.00488C8.76526 4.01598 8.66853 3.99994 8.58215 3.95802L7.63585 3.49882C7.04259 3.21087 6.42482 2.97541 6.26317 2.97541C5.88941 2.97541 5.88379 3.25135 6.22447 4.89078C6.43258 5.89203 6.57262 6.11513 5.97101 6.91572C5.06925 8.11576 4.844 9.60592 5.32757 11.1716C5.93704 13.1446 7.4295 14.4775 9.52773 14.9222C10.7926 15.1903 11.1232 15.5401 10.6402 16.9905C10.26 18.1319 10.0196 18.4261 9.46707 18.4261C8.72365 18.4261 8.25796 17.7821 8.51424 17.1082C8.62712 16.8112 8.59354 16.7795 7.89711 16.5255C5.77117 15.7504 4.14514 14.0131 3.40172 11.7223C2.82711 9.95184 3.07994 7.64739 4.00175 6.25453C4.31561 5.78028 4.32047 5.74006 4.174 4.83217C4.09113 4.31822 4.04631 3.49103 4.0744 2.9938Z"
-                fill="#FFFFFF" />
-              <path
-                d="M3.33203 15.9454C3.02568 15.4859 2.40481 15.3617 1.94528 15.6681C1.48576 15.9744 1.36158 16.5953 1.66793 17.0548C1.8941 17.3941 2.16467 17.6728 2.39444 17.9025C2.4368 17.9449 2.47796 17.9858 2.51815 18.0257C2.71062 18.2169 2.88056 18.3857 3.05124 18.5861C3.42875 19.0292 3.80536 19.626 4.0194 20.6962C4.11474 21.1729 4.45739 21.4297 4.64725 21.5419C4.85315 21.6635 5.07812 21.7352 5.26325 21.7819C5.64196 21.8774 6.10169 21.927 6.53799 21.9559C7.01695 21.9877 7.53592 21.998 7.99999 22.0008C8.00033 22.5527 8.44791 23.0001 8.99998 23.0001C9.55227 23.0001 9.99998 22.5524 9.99998 22.0001V21.0001C9.99998 20.4478 9.55227 20.0001 8.99998 20.0001C8.90571 20.0001 8.80372 20.0004 8.69569 20.0008C8.10883 20.0026 7.34388 20.0049 6.67018 19.9603C6.34531 19.9388 6.07825 19.9083 5.88241 19.871C5.58083 18.6871 5.09362 17.8994 4.57373 17.2891C4.34391 17.0194 4.10593 16.7834 3.91236 16.5914C3.87612 16.5555 3.84144 16.5211 3.80865 16.4883C3.5853 16.265 3.4392 16.1062 3.33203 15.9454Z"
-                fill="#FFFFFF" />
-            </svg>
-            <!-- <i class="fa-brands fa-twitter"></i> -->
-          </a>
-
-
-          <a href="https://www.linkedin.com/in/tranhuudang/" title="ZhgChgLi's LinkedIn" target="_blank"
-            class="icon-button" alt="ZhgChgLi's LinkedIn">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg fill="#FFFF" width="1500px" height="1500px" viewBox="-6.5 0 32 32" version="1.1"
-              xmlns="http://www.w3.org/2000/svg">
-              <title>spotify</title>
-              <path
-                d="M13.2 20.84c-0.2 0-0.4-0.080-0.56-0.2-1.84-1.6-5.8-1.12-7.2-0.84-0.44 0.12-0.92-0.2-1-0.64-0.12-0.44 0.2-0.88 0.64-1 0.24-0.040 5.8-1.24 8.64 1.2 0.36 0.32 0.4 0.84 0.080 1.2-0.12 0.16-0.36 0.28-0.6 0.28zM14.2 18.44c-0.16 0-0.32-0.040-0.48-0.16-3.36-2.4-8.48-1.080-8.52-1.080-0.44 0.12-0.92-0.16-1.040-0.6s0.16-0.92 0.6-1.040c0.24-0.080 5.92-1.56 9.96 1.32 0.36 0.28 0.48 0.8 0.2 1.16-0.2 0.28-0.44 0.4-0.72 0.4zM15.24 15.72c-0.16 0-0.32-0.040-0.48-0.16-4.44-2.96-10.040-1.040-10.12-1.040-0.44 0.16-0.88-0.080-1.040-0.52s0.080-0.92 0.52-1.080c0.28-0.080 6.48-2.2 11.6 1.24 0.4 0.24 0.48 0.76 0.24 1.16-0.2 0.24-0.48 0.4-0.72 0.4zM9.6 25.6c-5.28 0-9.6-4.32-9.6-9.6s4.32-9.6 9.6-9.6 9.6 4.32 9.6 9.6-4.32 9.6-9.6 9.6zM9.6 8.080c-4.36 0-7.92 3.56-7.92 7.92s3.56 7.92 7.92 7.92 7.92-3.56 7.92-7.92-3.56-7.92-7.92-7.92z">
-              </path>
-            </svg>
-            <!-- <i class="fa-brands fa-linkedin"></i> -->
-          </a>
-
-
-          <a href="https://tiktok.com/@theanishtar" title="" target="_blank" class="icon-button"
-            alt="ZhgChgLi's Instagram">
-            <!-- <i class="fa-brands fa-instagram"></i> -->
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="30px" height="30px" viewBox="0 0 24 24" id="Layer_1" data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg">
-              <defs>
-                <style>
-                  .cls-1 {
-                    fill: none;
-                    stroke: #ffffff;
-                    stroke-miterlimit: 10;
-                    stroke-width: 1.89px;
-                  }
-                </style>
-              </defs>
-              <path class="cls-1"
-                d="M12.94,1.61V15.78a2.83,2.83,0,0,1-2.83,2.83h0a2.83,2.83,0,0,1-2.83-2.83h0a2.84,2.84,0,0,1,2.83-2.84h0V9.17h0A6.61,6.61,0,0,0,3.5,15.78h0a6.61,6.61,0,0,0,6.61,6.61h0a6.61,6.61,0,0,0,6.61-6.61V9.17l.2.1a8.08,8.08,0,0,0,3.58.84h0V6.33l-.11,0a4.84,4.84,0,0,1-3.67-4.7H12.94Z" />
-            </svg>
-          </a>
-
-
-          <a href="mailto:dangthpc@gmail.com" title="Email: dangthpc@gmail.com" target="_blank" class="icon-button"
-            alt="zhgchgli@gmail.com">
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="35px" height="35px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M10 19H6.2C5.0799 19 4.51984 19 4.09202 18.782C3.71569 18.5903 3.40973 18.2843 3.21799 17.908C3 17.4802 3 16.9201 3 15.8V8.2C3 7.0799 3 6.51984 3.21799 6.09202C3.40973 5.71569 3.71569 5.40973 4.09202 5.21799C4.51984 5 5.0799 5 6.2 5H17.8C18.9201 5 19.4802 5 19.908 5.21799C20.2843 5.40973 20.5903 5.71569 20.782 6.09202C21 6.51984 21 7.0799 21 8.2V10M20.6067 8.26229L15.5499 11.6335C14.2669 12.4888 13.6254 12.9165 12.932 13.0827C12.3192 13.2295 11.6804 13.2295 11.0677 13.0827C10.3743 12.9165 9.73279 12.4888 8.44975 11.6335L3.14746 8.09863M14 21L16.025 20.595C16.2015 20.5597 16.2898 20.542 16.3721 20.5097C16.4452 20.4811 16.5147 20.4439 16.579 20.399C16.6516 20.3484 16.7152 20.2848 16.8426 20.1574L21 16C21.5523 15.4477 21.5523 14.5523 21 14C20.4477 13.4477 19.5523 13.4477 19 14L14.8426 18.1574C14.7152 18.2848 14.6516 18.3484 14.601 18.421C14.5561 18.4853 14.5189 18.5548 14.4903 18.6279C14.458 18.7102 14.4403 18.7985 14.405 18.975L14 21Z"
-                stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <!-- <i class="fa-solid fa-envelope"></i> -->
-          </a>
-
-        </div>
-      </div>
-
-      <p class="description">Fullstack developer <span><a href="https://devlands.io.vn">@devlands</a></span></p>
+      <p class="description" id="position">Fullstack developer</p>
     </div>
 
     <div class="links">
 
+      <div class="links" id="social-links">
+        <!-- <a href="https://dangth.dev/" target="_blank" class="link-button" alt="ZhgChgLi's Website" title="">
+          <i class="fa-regular fa-address-card"></i> Portfolio
+        </a> -->
 
-      <a href="https://davisupers.web.app" target="_blank" class="link-button" alt="ZhgChgLi's Tech Blog"
-        title="Davis's Tech Blog">
-        <?xml version="1.0" encoding="utf-8"?>
+        <!-- <a href="javascript:void(0);" class="link-button"
+          onclick="togglePopup(null, null, './images/wechat/wechat-davis.jpg')">
+          <i class="fa-brands fa-weixin"></i> Wechat <span class='link-button-text'>(Davis Tran)</span>
+        </a>
 
-        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-        <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-        <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          width="20px" height="20px" viewBox="0 0 512 512" xml:space="preserve">
-          <style type="text/css">
-            .st0 {
-              fill: #ffffff;
-            }
-          </style>
-          <g>
-            <path class="st0"
-              d="M421.073,221.719c-0.578,11.719-9.469,26.188-23.797,40.094v183.25c-0.016,4.719-1.875,8.719-5.016,11.844
-		c-3.156,3.063-7.25,4.875-12.063,4.906H81.558c-4.781-0.031-8.891-1.844-12.047-4.906c-3.141-3.125-4.984-7.125-5-11.844V152.219
-		c0.016-4.703,1.859-8.719,5-11.844c3.156-3.063,7.266-4.875,12.047-4.906h158.609c12.828-16.844,27.781-34.094,44.719-49.906
-		c0.078-0.094,0.141-0.188,0.219-0.281H81.558c-18.75-0.016-35.984,7.531-48.25,19.594c-12.328,12.063-20.016,28.938-20,47.344
-		v292.844c-0.016,18.406,7.672,35.313,20,47.344C45.573,504.469,62.808,512,81.558,512h298.641c18.781,0,36.016-7.531,48.281-19.594
-		c12.297-12.031,20-28.938,19.984-47.344V203.469c0,0-0.125-0.156-0.328-0.313C440.37,209.813,431.323,216.156,421.073,221.719z" />
-            <path class="st0" d="M498.058,0c0,0-15.688,23.438-118.156,58.109C275.417,93.469,211.104,237.313,211.104,237.313
-		c-15.484,29.469-76.688,151.906-76.688,151.906c-16.859,31.625,14.031,50.313,32.156,17.656
-		c34.734-62.688,57.156-119.969,109.969-121.594c77.047-2.375,129.734-69.656,113.156-66.531c-21.813,9.5-69.906,0.719-41.578-3.656
-		c68-5.453,109.906-56.563,96.25-60.031c-24.109,9.281-46.594,0.469-51-2.188C513.386,138.281,498.058,0,498.058,0z" />
-          </g>
-        </svg>
-        <!-- <i class="fa-brands fa-medium"></i>  -->
-        Tech Blog <span class='link-button-text'>(Davilands)</span>
-      </a>
-
-      <a href="https://dangth.dev/" target="_blank" class="link-button" alt="ZhgChgLi's Website"
-        title="ZhgChgLi's Website">
-        <i class="fa-regular fa-address-card"></i> Portfolio
-      </a>
-
-
-      <a href="tel:0392023330" target="_blank" class="link-button"
-        alt="ZMarkupParser is a pure-Swift library that helps you to convert HTML strings to NSAttributedString with customized style and tags."
-        title="ZMarkupParser is a pure-Swift library that helps you to convert HTML strings to NSAttributedString with customized style and tags.">
-        <i class="fa-solid fa-phone"></i> Phone <span class='link-button-text'>(0392 023 330)</span>
-      </a>
-
-
-      <a href="https://github.com/davilands" target="_blank" class="link-button"
-        alt="ZReviewTender is a tool for fetching app reviews from the App Store and Google Play Console and integrating them into your workflow."
-        title="ZReviewTender is a tool for fetching app reviews from the App Store and Google Play Console and integrating them into your workflow.">
-        <i class="fa-brands fa-github"></i> Github <span class='link-button-text'>(theanishtar)</span>
-      </a>
-
-
-      <a href="https://tiktok.com/@devlands" target="_blank" class="link-button"
-        alt="ZMediumToMarkdown is a powerful tool that allows you to effortlessly download and convert your Medium posts to Markdown format."
-        title="ZMediumToMarkdown is a powerful tool that allows you to effortlessly download and convert your Medium posts to Markdown format.">
-        <i class="fa-brands fa-tiktok"></i></i> Tiktok <span class='link-button-text'>(devlands)</span>
-      </a>
-
-      <a href="https://www.youtube.com/@devlands" target="_blank" class="link-button"
-        alt="linkyee is a fully customized, open-source LinkTree alternative deployed directly on GitHub Pages."
-        title="linkyee is a fully customized, open-source LinkTree alternative deployed directly on GitHub Pages.">
-        <i class="fa-brands fa-youtube"></i> YouTube <span class='link-button-text'>(FroggyDev)</span>
-      </a>
-
-      <a href="javascript:void(0);" class="link-button"
-        onclick="togglePopup(null, null, './images/wechat/wechat-davis.jpg')">
-        <i class="fa-brands fa-weixin"></i> Wechat <span class='link-button-text'>(Davis Tran)</span>
-      </a>
-
-      <a href="javascript:void(0);" class="link-button" onclick="togglePopup(null, null, './images/pay/payment.png')">
-        <i class="fa-solid fa-money-check-dollar"></i> Pay <span class='link-button-text'>(Tran Huu Dang)</span>
-      </a>
+        <a href="javascript:void(0);" class="link-button" onclick="togglePopup(null, null, './images/pay/payment.png')">
+          <i class="fa-solid fa-money-check-dollar"></i> Pay <span class='link-button-text'>(Tran Huu Dang)</span>
+        </a> -->
+      </div>
 
       <div id="popup" class="popup">
         <span></span>
@@ -250,6 +92,7 @@
   <script src="fontawesome/js/all.js" data-auto-replace-svg="nest"></script>
 
   <script src="./scripts.js"></script>
+  <script src="./fillData.js"></script>
 </body>
 
 </html>
