--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
 
-  <meta property="og:title" content="ZhgChgLi's Links" />
+  <meta property="og:title" content="Bio Link" />
   <meta name="author" content="@theanishtar" />
   <meta property="og:locale" content="en" />
   <meta name="description"
     content="An iOS, web, and automation developer from Taiwan 🇹🇼 who also loves sharing, traveling, and writing." />
   <meta property="og:description"
     content="An iOS, web, and automation developer from Taiwan 🇹🇼 who also loves sharing, traveling, and writing." />
-  <meta property="og:site_name" content="ZhgChgLi's Links" />
+  <meta property="og:site_name" content="Bio Link" />
   <meta property="og:image" content="./images/profile.jpeg" />
   <meta property="og:type" content="article" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="./images/profile.jpeg" />
-  <meta property="twitter:title" content="ZhgChgLi's Links" />
+  <meta property="twitter:title" content="Bio Link" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
   <link rel="manifest" href="./images/favicons/site.webmanifest">
   <link rel="shortcut icon" href="./images/favicons/favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="ZhgChgLi's Links">
-  <meta name="application-name" content="ZhgChgLi's Links">
+  <meta name="apple-mobile-web-app-title" content="Bio Link">
+  <meta name="application-name" content="Bio Link">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./images/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
