--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <body>
   <div class="container">
     <div class="profile">
-      <img id="avatar" src="./images/avt.png" alt="Profile Picture" class="profile-pic" />
-      <h1 class="name" id="fullname">Davis Tran</h1>
+      <img id="avatar" src="" alt="Profile Picture" class="profile-pic" />
+      <h1 class="name" id="fullname">...</h1>
 
 
-      <p class="description" id="position">Fullstack developer</p>
+      <p class="description" id="position">...</p>
     </div>
 
     <div class="links">
