--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
   <link rel="stylesheet" href="./styles.css" />
   <link rel="stylesheet" href="./popup.css">
+  <link rel="stylesheet" href="./mode.css">
+
 </head>
 
 <body>
